--- a/package.json
+++ b/package.json
@@ -20,19 +20,24 @@
     "@payloadcms/payload-cloud": "3.39.1",
     "@payloadcms/richtext-lexical": "3.39.1",
     "@payloadcms/ui": "3.39.1",
+    "@types/node-fetch": "^2.6.12",
     "cross-env": "^7.0.3",
+    "form-data": "^4.0.2",
     "graphql": "^16.8.1",
     "next": "15.3.0",
+    "node-fetch": "^3.3.2",
     "payload": "^3.39.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "0.32.6"
+    "sharp": "0.32.6",
+    "ssh2-sftp-client": "^12.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^22.5.4",
     "@types/react": "19.1.0",
     "@types/react-dom": "19.1.2",
+    "@types/ssh2-sftp-client": "^9.0.4",
     "eslint": "^9.16.0",
     "eslint-config-next": "15.3.0",
     "prettier": "^3.4.2",
