--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node-fetch": "^2.6.12",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "form-data": "^4.0.2",
     "graphql": "^16.8.1",
